Added static files and Bootstrap

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
           <img src="{{ url_for('static', path='/icon-white.svg') }}" alt="" width="30" height="24" class="d-inline-block align-top">
-          FastAPI
+          FastAPI demo
         </a>
       </div>
     </nav>
